# AI-Theorem-Prover

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  estructuraDIR.txt  fix_import_structure.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  theorems_dataset.json
data/: theorems_dataset.json
data/scripts/: train_model.py
scripts/: __init__.py  train_model.py
src/: __init__.py  dataset_manager.py  logic_validator.py  theorem_generator.py
