[metadata]
name = ai-theorem-prover
version = 0.1.0
author = Mauricio Gutierrez
author_email = mauriciogut67@gmail.com
description = Generador automático de teoremas usando ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MauricioGut/AI-Theorem-Prover
project_urls =
    Bug Tracker = https://github.com/MauricioGut/AI-Theorem-Prover/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.9.0
    transformers>=4.20.0
    datasets>=2.0.0
    numpy>=1.21.0
    sympy>=1.10.0
    pandas>=1.3.0

[options.packages.find]
where = src

[options.extras_require]
dev = 
    pytest>=6.2.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950
web = 
    flask>=2.0.0
    fastapi>=0.75.0
    uvicorn>=0.17.0
